--- a/nabard/static/css/style.css
+++ b/nabard/static/css/style.css
@@ -20,34 +20,7 @@ body {
     background-color: #f2f3f4;
 }
 
-nav.navigation {
-    display: none;
-}
-
 /* navbar */
-
-#menuToggle {
-    display: block;
-    position: relative;
-    top: 50px;
-    left: 50px;
-    z-index: 1;
-}
-
-#menuToggle input {
-    display: block;
-    width: 40px;
-    height: 32px;
-    position: absolute;
-    top: -7px;
-    left: -5px;
-    cursor: pointer;
-    opacity: 0;
-    /* hide this */
-    z-index: 2;
-    /* and place it over the hamburger */
-    -webkit-touch-callout: none;
-}
 
 nav {
     width: 100%;
@@ -61,17 +34,17 @@ nav {
     z-index: 900;
 }
 
+nav#navbar {
+    display: flex;
+}
+
 nav #nav-brand {
-    display: block;
-    width: 20%;
-    float: right;
     box-sizing: border-box;
     font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 1.35rem;
     font-weight: 700;
     text-decoration: none;
     color: rgba(255, 255, 255);
-    margin-left: 90px;
     padding-bottom: .3125rem;
     cursor: pointer;
 }
@@ -81,20 +54,21 @@ nav button {
 }
 
 nav ul {
-    display: block;
-    width: 60%;
-    float: left;
+    display: flex;
+    justify-content: flex-end;
     list-style: none;
     text-align: left;
     box-sizing: border-box;
-    margin-top: 5px;
     margin-right: 20px;
 }
 
 nav ul li {
-    display: inline-block;
     padding: 0 20px;
     box-sizing: border-box;
+}
+
+nav ul li:nth-child(6) {
+    margin-right: 280px;
 }
 
 nav ul li a {
@@ -103,10 +77,6 @@ nav ul li a {
     font-weight: 700;
     text-decoration: none;
     color: white;
-}
-
-.clear-fix {
-    clear: both;
 }
 
 /* Header */
@@ -182,15 +152,18 @@ header #heading-link:hover {
     color: #e2005a;
 }
 
+/* Info Section */
+
 section#section-info {
     width: 100%;
     background-color: white;
     padding-top: 50px;
-    padding-bottom: 150px;
+    padding-bottom: 90px;
 }
 
 section#section-info .row {
     text-align: center;
+    display: flex;
 }
 
 section#section-info h2 {
@@ -205,12 +178,8 @@ section#section-info h2 {
     margin-top: 50px;
 }
 
-section#section-info {
-    position: relative;
-}
-
-section#section-info img {
-    float: right;
+section#section-info .info-image {
+    margin-top: 20px;
 }
 
 section#section-info p {
@@ -219,7 +188,7 @@ section#section-info p {
     font-weight: 400;
     line-height: 1.5;
     color: black;
-    padding-right: 32%;
+    padding-right: 8%;
     margin-top: 50px;
     text-align: right;
     box-sizing: border-box;
@@ -537,46 +506,30 @@ section#timetable .workshops h2 {
     margin-top: 50px;
 }
 
-/* download section */
+/* sponsors section */
 
-section#download::after {
-    display: block;
-    content: '';
-    clear: both;
+section#sponsors .container .sponsors-items {
+    display: flex;
+    justify-content: space-around;
 }
 
-section#download .download-items::after {
-    display: block;
-    content: '';
-    clear: both;
-}
-
-section#download {
+section#sponsors {
     width: 100%;
     background-color: #ff0066;
-    padding: 90px 0;
+    padding-bottom: 90px;
+    padding-top: 100px;
     color: white;
 }
 
-section#download img {
-    position: relative;
-    margin-left: 17%;
-}
-
-section#download .download-items .item {
-    float: left;
-    width: 33.33%
-}
-
-section#download p {
+section#sponsors p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-section#download .row {
+section#sponsors .row {
     text-align: center;
 }
 
-section#download h2 {
+section#sponsors h2 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 2rem;
     font-weight: 500;
@@ -592,9 +545,18 @@ section#contact {
     background-color: white;
 }
 
-section#contact .row {
+section#contact .title {
     text-align: center;
+}
+
+section#contact .row {
     padding: 150px 0;
+}
+
+section#contact .contact-items ul {
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
 }
 
 section#contact h2 {
@@ -614,14 +576,8 @@ section#contact p {
 }
 
 section#contact ul {
-    width: 100%;
     list-style: none;
     padding-top: 50px;
-}
-
-section#contact ul li {
-    display: inline-block;
-    width: 24%
 }
 
 section#contact ul p {
@@ -662,222 +618,69 @@ footer a {
 
 /* media queries */
 
-/* Extra small devices (portrait phones, less than 576px) */
+/* Large devices (desktops, less than 1200px) */
 
-@media (max-width: 575.98px) {
-    section#portfolio ul li {
-        width: 100%;
-    }
-}
-
-/* Small devices (landscape phones, less than 768px) */
-
-@media (max-width: 767.98px) {
-    section#services .service-items .item {
-        float: none;
-        width: 100%;
-    }
-    section#services .row {
-        padding-bottom: 0;
-    }
-    section#services .service-items {
-        margin-bottom: 150px;
-    }
-}
+@media (max-width: 1199.98px) {}
 
 /* Medium devices (tablets, less than 992px) */
 
-@media (max-width: 991.98px) {
-    .container {
-        width: 95%;
-    }
-    #navbar {
-        display: none;
-    }
-    nav {
-        background-color: rgba(0, 0, 0, 0);
-        padding: 0;
-    }
+@media (max-width: 991.98px) {}
+
+/* Small devices (landscape phones, less than 768px) */
+
+@media (max-width: 767.98px) {}
+
+/* Extra small devices (portrait phones, less than 576px) */
+
+@media (max-width: 575.98px) {
     /* Navbar */
-    nav.navigation {
-        display: block;
-        /* background-color: rgb(15, 102, 233);
-        height: 80px; */
-    }
-    #menuToggle {
-        display: block;
-        position: relative;
-        top: 30px;
-        left: 40px;
-        z-index: 1;
-        -webkit-user-select: none;
-        user-select: none;
-        background-color: #ff0066;
-        width: fit-content;
-        border: 10px solid #ff0066;
-        border-radius: 100px;
-        height: 40px;
-    }
-    #menuToggle input {
-        display: block;
-        width: 40px;
-        height: 32px;
-        position: absolute;
-        top: -7px;
-        left: -5px;
-        cursor: pointer;
-        opacity: 0;
-        /* hide this */
-        z-index: 2;
-        /* and place it over the hamburger */
-        -webkit-touch-callout: none;
-    }
-    /*
- * Just a quick hamburger
- */
-    #menuToggle span {
-        display: block;
-        width: 33px;
-        height: 4px;
-        margin: 5px;
-        position: relative;
-        background: white;
-        border-radius: 3px;
-        z-index: 1;
-        transform-origin: 4px 0px;
-        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), opacity 0.55s ease;
-    }
-    #menuToggle span:first-child {
-        transform-origin: 0% 0%;
-    }
-    #menuToggle span:nth-last-child(2) {
-        transform-origin: 0% 100%;
-    }
-    /* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-    #menuToggle input:checked~span {
-        opacity: 1;
-        transform: rotate(45deg) translate(-2px, -1px);
-        background: white;
-    }
-    /*
- * But let's hide the middle one.
- */
-    #menuToggle input:checked~span:nth-last-child(3) {
-        opacity: 0;
-        transform: rotate(0deg) scale(0.2, 0.2);
-    }
-    /*
- * Ohyeah and the last one should go the other direction
- */
-    #menuToggle input:checked~span:nth-last-child(2) {
-        transform: rotate(-45deg) translate(0, -1px);
-    }
-    /*
- * Make this absolute positioned
- * at the top left of the screen
- */
-    #menu {
-        position: fixed;
-        min-height: 1000vh;
-        width: 300px;
-        margin: -100px 0 0 -50px;
-        padding: 50px;
-        padding-top: 125px;
-        background: #ff0066;
-        list-style-type: none;
-        -webkit-font-smoothing: antialiased;
-        /* to stop flickering of text in safari */
-        transform-origin: 0% 0%;
-        transform: translate(-100%, 0);
-        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-    }
-    #menu li {
-        display: block;
-        padding: 10px 0;
-        font-size: 22px;
-        color: white;
-    }
-    /*
- * And let's slide it in from the left
- */
-    #menuToggle input:checked~ul {
-        transform: none;
-    }
-    /* nav {
-        padding: 0;
-        background-color: rgb(15, 102, 233);
-    }
-    nav #nav-brand {
-        color: white;
-        width: 50%;
-        margin-top: 1%;
-        margin-left: 0;
-    }
-    nav button {
-        display: block;
-        box-sizing: border-box;
-        margin-bottom: 30px;
-        margin-top: 5%;
-        width: 40px;
-        height: 40px;
-        background: white;
-        color: lightgray;
-        border: 1px solid lightgray;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-    nav button:focus {
-        outline: none;
-    }
-    nav ul {
+    nav#navbar {
         display: none;
     }
-    nav ul li {
-        display: block;
-    }
-    nav ul li {
-        padding: 5px 0;
-    }
-    nav ul li:last-child {
-        padding-bottom: 30px;
-    } */
     /* Header */
-    header h1 {
-        font-size: 2.25rem;
-    }
     header .row {
-        padding: 100px 0;
-    }
-    /* Information */
-    section#section-info p {
         padding: 0;
+        padding-top: 50px;
     }
-    /* Services */
-    section#services .service-items .item {
-        float: left;
-        width: 48%;
+    header img {
+        width: 100%;
     }
-    section#portfolio ul {
-        margin-top: 100px;
+    header h1 {
+        font-size: 24px;
     }
-    /* Portfolio */
-    section#portfolio ul li {
-        width: 50%;
+    header #heading-link {
+        font-size: 40px;
+        margin-top: 0;
+    }
+    /* Info */
+    section#section-info h2 {
+        font-size: 30px;
+    }
+    section#section-info .row {
+        flex-basis: 100%;
+        flex-wrap: wrap;
+    }
+    section#section-info p {
+        font-size: 24px;
+    }
+    section#section-info .info-image img {
+        width: 100%;
+    }
+    /* Sponsors */
+    section#sponsors .container .sponsors-items {
+        flex-basis: 100%;
+        flex-wrap: wrap;
+    }
+    section#sponsors .container .sponsors-items .item {
+        margin-top: 50px;
     }
     /* Contact */
-    section#contact p {
-        padding: 0;
+    section#contact h2 {
+        font-size: 30px;
     }
-}
-
-/* Large devices (desktops, less than 1200px) */
-
-@media (max-width: 1199.98px) {
-    .container {
-        width: 90%;
+    section#contact .contact-items ul {
+        flex-basis: 100%;
+        flex-wrap: wrap;
     }
 }
 
