added domain and local ip to settings last front commit added

--- a/nabard/templates/index.html
+++ b/nabard/templates/index.html
@@ -192,13 +192,6 @@
 			<span class="underline"></span>
 			<div class="master-staff">
 				<div class="master-item">
-					<a href="http://eng.ui.ac.ir/~kaedi">
-						<img src="{% static 'img/photos/kaedi2.jpg' %}" alt="">
-					</a>
-					<h3>دکتر مرجان کائدی</h3>
-					<p>دبیر مسابقه <br>دانشگاه اصفهان</p>
-				</div>
-				<div class="master-item">
 					<a href="http://eng.ui.ac.ir/~sh.rahimi">
 						<img src="{% static 'img/photos/shekoufeh2.jpg' %}" alt="">
 					</a>
@@ -206,6 +199,14 @@
 					<p>دبیر مسابقه</p>
 					<p>دانشگاه اصفهان</p>
 				</div>
+				<div class="master-item">
+					<a href="http://eng.ui.ac.ir/~kaedi">
+						<img src="{% static 'img/photos/kaedi2.jpg' %}" alt="">
+					</a>
+					<h3>دکتر مرجان کائدی</h3>
+					<p>دبیر مسابقه <br>دانشگاه اصفهان</p>
+				</div>
+
 			</div>
 			<div class="staff">
 				<div class="master-item">
@@ -219,23 +220,24 @@
 					<p>مسئول امور اجرایی</p>
 				</div>
 				<div class="master-item">
-					<a href="http://rezapazan.cvbuilder.me">
-						<img src="{% static 'img/photos/pazan.jpg' %}" alt="">
-					</a>
-					<h3>رضا پازن</h3>
-					<p>مسئول امور اجرایی</p>
-				</div>
-				<div class="master-item">
 					<img src="{% static 'img/photos/jahanbin2.jpg' %}" alt="">
 					<h3>امیر جهان بین</h3>
 					<p>مسئول امور اجرایی</p>
 				</div>
 				<div class="master-item">
+					<a href="http://rezapazan.cvbuilder.me">
+						<img src="{% static 'img/photos/pazan.jpg' %}" alt="">
+					</a>
+					<h3>رضا پازن</h3>
+					<p>توسعه دهنده سایت</p>
+				</div>
+
+				<div class="master-item">
 					<a href="https://www.linkedin.com/in/mmoallemi99">
 						<img src="{% static 'img/photos/Moalemi.jpg' %}" alt="">
 					</a>
 					<h3>محمد معلمی</h3>
-					<p>مسئول امور اجرایی</p>
+					<p>توسعه دهنده سایت</p>
 				</div>
 			</div>
 		</div>
@@ -251,7 +253,7 @@
 			<span class="underline"></span>
 			<p dir="rtl">شرکت کنندگان در این مسابقه ابتدا باید ایده ای برای کسب و کار و درآمدزایی ارائه دهند و
 				سپس آن رادر
-				قالب یک اپلیکیشن مبایل
+				قالب یک اپلیکیشن موبایل
 				یا وب پیاده سازی کنند.
 				تعداد اعضا هر تیم بین 1 تا 5 نفر می باشد. هر تیم می تواند حداکثر 3 اپلیکیشن ارسال کند. همچنین
 				حضور شرکت کنندگان در بیش
@@ -269,9 +271,14 @@
 						<td>اپلیکیشن طراحی شده توسط تیم</td>
 					</tr>
 					<tr>
-						<td><a href="{% static 'NabardTemplate.pptx' %}">نمونه
-							ارائه شده</a><a href="{% static 'Nabard.pptx' %}">دانلود فرمت
-							پاورپوینت</a></td>
+						<td>
+							<a href="{% static 'NabardTemplate.pptx' %}">
+								*نمونه پاورپوینت ارائه شده
+							</a>
+							<a href="{% static 'Nabard.pptx' %}">
+								دانلود فرمت پاورپوینت
+							</a>
+						</td>
 						<td>فایل پاورپوینت ارائه</td>
 					</tr>
 				</table>
