--- a/nabard/templates/index.html
+++ b/nabard/templates/index.html
@@ -15,7 +15,7 @@
 	<title>مسابقه نبرد اپلیکیشن ها</title>
 </head>
 
-<body>
+OB<body>
 <!-- Navbar -->
 <nav class="navbar" id="navbarid">
 	<a href="javascript:void(0);" class="icon" onclick="toggle_nav()">
@@ -448,7 +448,25 @@
         }
         prevScrollpos = currentScrollPos;
     };
+</script
+
+<!-- Default Statcounter code for Battle of Apps
+http://nabard.comp.ui.ac.ir -->
+<script type="text/javascript">
+var sc_project=12039859; 
+var sc_invisible=1; 
+var sc_security="56f31dc8"; 
+var sc_https=1; 
+var sc_remove_link=1; 
 </script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><img class="statcounter"
+src="https://c.statcounter.com/12039859/0/56f31dc8/1/"
+alt="web stats"></div></noscript>
+<!-- End of Statcounter Code -->
+
 </body>
 
 </html>
